# simple-web-server

./: CMakeLists.txt  P  README.md  server_config_cloud  server_config_mult  server_config_one
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: config_parser.h  dispatcher.h  echo_handler.h  handler_config.h  handler_config_builder.h  handler_factory.h  health_handler.h  logger.h  meme_handler.h  not_found_handler.h  pathfinder.h  proxy_handler.h  reply.h  request.h  request_handler.h  response.h  server.h  session.h  session_test.h  shared.h  static_handler.h  status_handler.h
meme/: memeform.html
meme_src/: memeadded.html  memeedit.html  memeform.html  saved_memes  saved_memes.db  saved_memes.db.orig  saved_memes2.db
src/: .echo_handler.cc.swp  .static_handler.cc.swp  config_parser.cc  dispatcher.cc  echo_handler.cc  handler_config.cc  handler_config_builder.cc  handler_factory.cc  health_handler.cc  logger.cc  main.cc  meme_handler.cc  not_found_handler.cc  pathfinder.cc  proxy_handler.cc  reply.cc  request.cc  request_handler.cc  response.cc  server.cc  server.h  server_main.cc  session.cc  session.h  session_test.cc  shared.cc  static_handler.cc  status_handler.cc
static_src/: blah.txt  hi.html
static_src1/: moo.txt
tests/: .echo_handler_test.cc.swp  IntegrationTest  IntegrationTestDeletion.sh  IntegrationTestMeme.sh  IntegrationTestMulti.sh  blah.txt  config_parser_test.cc  curl_resp.txt  dispatcher_test.cc  echo_handler_test.cc  example_config  exp_proxy.txt  http_config  includes_comment_config  integration_test_proxy.sh  meme1.html  meme_handler_test.cc  missing_open_config  multiple_blocks_config  proxy.txt  proxy_config  proxy_handler_test.cc  proxy_integration_config_proxy  reply_test.cc  request_handler_test.cc  request_test.cc  response_test.cc  session_test.cc  static_handler_test.cc
